# Ontograph_v1

./: .gitignore  PIPELINE.md  README.md  pyproject.toml
data/: impact_scenarios_example.yaml  org_knowledge_example.yaml  rocket_rules.yaml  rules_example.yaml  uam_rules.yaml
data/ontology/: cubesatontology.owl  rocket_design_ontology.owl  uam.owl
docs/: rules_checker.md
ontograph/evaluator/: __init__.py  comparator.py  metrics.py
ontograph/generator/: __init__.py  instance_gen.py  owl_builder.py  schema.py  taxonomy.py
ontograph/impact/: __init__.py  analyzer.py  loader.py  schema.py
ontograph/ingest/: aligner.py  chunker.py  extractor.py  loader.py  mapper.py  org_loader.py
ontograph/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
ontograph/models/: __init__.py  alignment.py  document.py  evaluation.py  extraction.py  ontology.py  synthesis.py
ontograph/reconstruction/: __init__.py  direct_extractor.py  runner.py  schema.py
ontograph/rules/: __init__.py  checker.py  conflict_detector.py  conflict_scorer.py  generator.py  loader.py  schema.py
ontograph/synthesizer/: __init__.py  generator.py  self_check.py
ontograph/utils/: __init__.py  io.py  iri_align.py  owl.py  owl_diff.py
scripts/: align_delta.py  analyze_impact.py  apply_org_knowledge.py  check_rules.py  demo_synthesizer.py  detect_conflicts.py  generate_ontology.py  reconstruct.py  review_delta.py  run_pipeline.py  test_ingest.py
tests/unit/: test_evaluator.py  test_generator_instance_gen.py  test_generator_owl_builder.py  test_generator_schema.py  test_io.py  (+15 more)
(+3 files in other folders)
